--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,24 @@ services:
     container_name: website-nginx
     depends_on:
       - app
+    restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./docker/certs:/etc/nginx/certs:ro
+      - ./docker/letsencrypt:/etc/letsencrypt
+      - ./docker/certbot/www:/var/www/certbot
+      - ./docker/nginx/ensure-certs.sh:/docker-entrypoint.d/40-ensure-certs.sh:ro
+
+  certbot:
+    image: certbot/certbot:latest
+    container_name: website-certbot
+    depends_on:
+      - nginx
+    restart: unless-stopped
+    volumes:
+      - ./docker/letsencrypt:/etc/letsencrypt
+      - ./docker/certbot/www:/var/www/certbot
+    entrypoint: /bin/sh
+    command: -c "trap exit TERM; while :; do certbot renew --webroot -w /var/www/certbot --quiet || true; sleep 12h & wait $!; done"
