--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -3,25 +3,39 @@ upstream next_app {
     keepalive 64;
 }
 
-# Redirect HTTP to HTTPS
+# HTTP listener handles ACME challenges then redirects everything else
 server {
     listen 80;
     server_name apilog.kr www.apilog.kr;
-    return 301 https://$host$request_uri;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        try_files $uri =404;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name apilog.kr www.apilog.kr;
     charset utf-8;
 
-    ssl_certificate /etc/nginx/certs/fullchain.pem;
-    ssl_certificate_key /etc/nginx/certs/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/apilog.kr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/apilog.kr/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
     client_max_body_size 10m;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        try_files $uri =404;
+    }
 
     location / {
         proxy_pass http://next_app;
