--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,9 @@ jobs:
       - name: ✅ 리포지토리 체크아웃
         uses: actions/checkout@v4
 
+      - name: 🔧 Buildx 설정
+        uses: docker/setup-buildx-action@v3
+
       - name: 🔑 GHCR 로그인
         uses: docker/login-action@v3
         with:
