--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,32 +45,94 @@ jobs:
           file: ./Dockerfile
 
   deploy:
-    name: 원격 서버 배포
+    name: Remote Server Deploy
     runs-on: ubuntu-latest
     needs: docker_publish
     steps:
-      - name: 🚀 SSH로 서버 접속 및 롤링 업데이트
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Create deploy bundle
+        run: |
+          set -euo pipefail
+          tar \
+            --exclude='.git' \
+            --exclude='.github' \
+            --exclude='node_modules' \
+            --exclude='.next' \
+            --exclude='deploy.tar.gz' \
+            -czf deploy.tar.gz \
+            .
+          ls -lh deploy.tar.gz
+
+      - name: Upload bundle to server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          source: "deploy.tar.gz"
+          target: ${{ secrets.DEPLOY_WORKDIR }}
+
+      - name: Remove local bundle
+        run: rm -f deploy.tar.gz
+
+      - name: Rolling update over SSH
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          script: |
-            set -euo pipefail
-            IMAGE="${{ needs.docker_publish.outputs.image_name }}:latest"
+        env:
+          DEPLOY_WORKDIR: ${{ secrets.DEPLOY_WORKDIR }}
+          DEPLOY_COMPOSE_FILE: ${{ secrets.DEPLOY_COMPOSE_FILE }}
+          DEPLOY_SERVICE: ${{ secrets.DEPLOY_SERVICE }}
+          DEPLOY_ARCHIVE: deploy.tar.gz
+        script: |
+          set -euo pipefail
+          IMAGE="${{ needs.docker_publish.outputs.image_name }}:latest"
+          WORKDIR="${DEPLOY_WORKDIR:-}"
+          COMPOSE_FILE="${DEPLOY_COMPOSE_FILE:-}"
+          SERVICE="${DEPLOY_SERVICE:-app}"
+          ARCHIVE="${DEPLOY_ARCHIVE:-deploy.tar.gz}"
 
-            echo "[1/4] GHCR 로그인"
-            echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io --username "${{ github.repository_owner }}" --password-stdin
+          echo "[1/5] GHCR login"
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io --username "${{ github.repository_owner }}" --password-stdin
 
-            echo "[2/4] 최신 이미지 풀"
-            docker pull "$IMAGE"
+          echo "[2/5] Pull latest image ($IMAGE)"
+          docker pull "$IMAGE"
 
-            echo "[3/4] compose 디렉터리로 이동"
-            cd "${{ secrets.DEPLOY_WORKDIR }}"
+          if [ -n "$WORKDIR" ]; then
+            echo "[3/5] Switching to $WORKDIR"
+            mkdir -p "$WORKDIR"
+            cd "$WORKDIR"
+          else
+            echo "[3/5] DEPLOY_WORKDIR is empty. Staying in $HOME"
+          fi
 
-            echo "[4/4] 애플리케이션 서비스 롤링 재시작"
-            docker compose up -d --pull always app
+          if [ -f "$ARCHIVE" ]; then
+            echo "[4/5] Unpacking $ARCHIVE"
+            tar -xzf "$ARCHIVE"
+            rm -f "$ARCHIVE"
+          else
+            echo "::warning::Deploy bundle '$ARCHIVE' not found. Skipping file sync"
+          fi
 
-            echo "[+] 불필요한 로컬 이미지 정리"
-            docker image prune -f >/dev/null
+          if [ -z "$COMPOSE_FILE" ]; then
+            COMPOSE_FILE="docker-compose.yml"
+          fi
+
+          if [ ! -f "$COMPOSE_FILE" ]; then
+            echo "::error::Compose file '$COMPOSE_FILE' not found in $(pwd)" >&2
+            ls -a
+            exit 1
+          fi
+
+          echo "[5/5] Rolling restart (service=$SERVICE, compose=$COMPOSE_FILE)"
+          docker compose -f "$COMPOSE_FILE" up -d --pull always "$SERVICE"
+
+          echo "[+] Pruning dangling local images"
+          docker image prune -f >/dev/null
+
