--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,17 +53,21 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create deploy bundle
+        id: bundle
         run: |
           set -euo pipefail
+          BUNDLE_PATH="${RUNNER_TEMP}/deploy.tar.gz"
           tar \
             --exclude='.git' \
             --exclude='.github' \
             --exclude='node_modules' \
             --exclude='.next' \
             --exclude='deploy.tar.gz' \
-            -czf deploy.tar.gz \
+            -czf "$BUNDLE_PATH" \
+            -C "$GITHUB_WORKSPACE" \
             .
-          ls -lh deploy.tar.gz
+          ls -lh "$BUNDLE_PATH"
+          echo "path=$BUNDLE_PATH" >> "$GITHUB_OUTPUT"
 
       - name: Upload bundle to server
         uses: appleboy/scp-action@v0.1.7
@@ -72,11 +76,12 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          source: "deploy.tar.gz"
+          source: ${{ steps.bundle.outputs.path }}
           target: ${{ secrets.DEPLOY_WORKDIR }}
 
       - name: Remove local bundle
-        run: rm -f deploy.tar.gz
+        if: steps.bundle.outputs.path != ''
+        run: rm -f "${{ steps.bundle.outputs.path }}"
 
       - name: Rolling update over SSH
         uses: appleboy/ssh-action@v1.2.0
