--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,9 +1,24 @@
+# -------------------------------
+# Upstreams
+# -------------------------------
+
+# Next.js 메인 서비스 (apilog.kr)
 upstream next_app {
     server app:3000;
     keepalive 64;
 }
 
-# HTTP listener handles ACME challenges then redirects everything else
+# APILog 대시보드 (Docker apilog-nginx → 호스트 8080)
+upstream apilog_dashboard {
+    server 127.0.0.1:8080;
+    keepalive 64;
+}
+
+# -------------------------------
+# 1) apilog.kr / www.apilog.kr
+# -------------------------------
+
+# HTTP → HTTPS 리다이렉트 + ACME 챌린지
 server {
     listen 80;
     server_name apilog.kr www.apilog.kr;
@@ -18,6 +33,7 @@ server {
     }
 }
 
+# HTTPS: Next.js 앱으로 프록시
 server {
     listen 443 ssl;
     http2 on;
@@ -40,11 +56,13 @@ server {
     location / {
         proxy_pass http://next_app;
         proxy_http_version 1.1;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $host;
+
         proxy_set_header Connection "";
         proxy_buffering off;
         proxy_read_timeout 60s;
@@ -55,6 +73,7 @@ server {
         proxy_pass http://next_app;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
+
         proxy_cache_valid 200 1h;
         expires 1h;
         add_header Cache-Control "public, max-age=3600, immutable";
@@ -64,5 +83,56 @@ server {
         proxy_pass http://next_app;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
+    }
+}
+
+# -------------------------------
+# 2) demo.apilog.kr → APILog(8080)
+# -------------------------------
+
+# HTTP → HTTPS 리다이렉트 + ACME 챌린지
+server {
+    listen 80;
+    server_name demo.apilog.kr;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        try_files $uri =404;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# HTTPS: APILog 대시보드 프록시
+server {
+    listen 443 ssl;
+    http2 on;
+    server_name demo.apilog.kr;
+    charset utf-8;
+
+    # ⚠ demo.apilog.kr용 인증서 필요 (certbot으로 발급)
+    ssl_certificate /etc/letsencrypt/live/demo.apilog.kr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/demo.apilog.kr/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    client_max_body_size 10m;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        try_files $uri =404;
+    }
+
+    location / {
+        proxy_pass http://apilog_dashboard;
+        proxy_http_version 1.1;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
