--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -144,38 +144,53 @@ jobs:
                 PRIMARY_DOMAIN="$1"
                 CERT_PATH="docker/letsencrypt/live/${PRIMARY_DOMAIN}/fullchain.pem"
                 KEY_PATH="docker/letsencrypt/live/${PRIMARY_DOMAIN}/privkey.pem"
-                NEEDS_CERT=0
-                ISSUER=""
-                if [ ! -f "$CERT_PATH" ] || [ ! -f "$KEY_PATH" ]; then
-                  NEEDS_CERT=1
-                elif command -v openssl >/dev/null 2>&1; then
-                  ISSUER="$(openssl x509 -in "$CERT_PATH" -noout -issuer 2>/dev/null || true)"
-                  if echo "$ISSUER" | grep -qi "$PRIMARY_DOMAIN"; then
-                    echo "[5/6] Existing certificate appears self-signed (issuer=$ISSUER)"
-                    NEEDS_CERT=1
-                  fi
-                fi
-
-                if [ "$NEEDS_CERT" -eq 1 ]; then
-                  echo "[5/6] Issuing certificates for: $CLEAN_DOMAINS"
-                  docker compose -f "$COMPOSE_FILE" up -d app nginx
-                  DOMAIN_FLAGS=""
-                  for domain in $CLEAN_DOMAINS; do
-                    [ -z "$domain" ] && continue
-                    DOMAIN_FLAGS="$DOMAIN_FLAGS -d $domain"
-                  done
-                  # shellcheck disable=SC2086
-                  CERTBOT_ARGS="certbot certonly --webroot -w /var/www/certbot --email \"$CERT_EMAIL\" --agree-tos --no-eff-email $DOMAIN_FLAGS"
-                  docker compose -f "$COMPOSE_FILE" run --rm certbot -c "$CERTBOT_ARGS"
-                  docker compose -f "$COMPOSE_FILE" exec nginx nginx -s reload || true
-                else
-                  if [ -z "$ISSUER" ] && command -v openssl >/dev/null 2>&1; then
-                    ISSUER="$(openssl x509 -in "$CERT_PATH" -noout -issuer 2>/dev/null || true)"
-                  fi
-                  if [ -n "$ISSUER" ]; then
-                    echo "[5/6] Valid certificate found at $CERT_PATH (issuer: $ISSUER)"
+                SENTINEL_PATH="$HOME/.certbot_issued_${PRIMARY_DOMAIN}"
+                if [ -f "$SENTINEL_PATH" ]; then
+                  echo "[5/6] Certificate issuance already completed once (sentinel: $SENTINEL_PATH)"
+                  if [ -f "$CERT_PATH" ] && [ -f "$KEY_PATH" ]; then
+                    if command -v openssl >/dev/null 2>&1; then
+                      EXISTING_ISSUER="$(openssl x509 -in "$CERT_PATH" -noout -issuer 2>/dev/null || true)"
+                      [ -n "$EXISTING_ISSUER" ] && echo "[5/6] Existing certificate issuer: $EXISTING_ISSUER"
+                    fi
                   else
-                    echo "[5/6] Valid certificate found at $CERT_PATH"
+                    echo "::warning::Certificate files missing but re-issuance is disabled. Remove $SENTINEL_PATH to force issuance."
+                  fi
+                else
+                  NEEDS_CERT=0
+                  ISSUER=""
+                  if [ ! -f "$CERT_PATH" ] || [ ! -f "$KEY_PATH" ]; then
+                    NEEDS_CERT=1
+                  elif command -v openssl >/dev/null 2>&1; then
+                    ISSUER="$(openssl x509 -in "$CERT_PATH" -noout -issuer 2>/dev/null || true)"
+                    if echo "$ISSUER" | grep -qi "$PRIMARY_DOMAIN"; then
+                      echo "[5/6] Existing certificate appears self-signed (issuer=$ISSUER)"
+                      NEEDS_CERT=1
+                    fi
+                  fi
+
+                  if [ "$NEEDS_CERT" -eq 1 ]; then
+                    echo "[5/6] Issuing certificates for: $CLEAN_DOMAINS"
+                    docker compose -f "$COMPOSE_FILE" up -d app nginx
+                    DOMAIN_FLAGS=""
+                    for domain in $CLEAN_DOMAINS; do
+                      [ -z "$domain" ] && continue
+                      DOMAIN_FLAGS="$DOMAIN_FLAGS -d $domain"
+                    done
+                    # shellcheck disable=SC2086
+                    CERTBOT_ARGS="certbot certonly --webroot -w /var/www/certbot --email \"$CERT_EMAIL\" --agree-tos --no-eff-email $DOMAIN_FLAGS"
+                    docker compose -f "$COMPOSE_FILE" run --rm certbot -c "$CERTBOT_ARGS"
+                    docker compose -f "$COMPOSE_FILE" exec nginx nginx -s reload || true
+                    touch "$SENTINEL_PATH"
+                  else
+                    if [ -z "$ISSUER" ] && command -v openssl >/dev/null 2>&1; then
+                      ISSUER="$(openssl x509 -in "$CERT_PATH" -noout -issuer 2>/dev/null || true)"
+                    fi
+                    if [ -n "$ISSUER" ]; then
+                      echo "[5/6] Valid certificate found at $CERT_PATH (issuer: $ISSUER)"
+                    else
+                      echo "[5/6] Valid certificate found at $CERT_PATH"
+                    fi
+                    touch "$SENTINEL_PATH"
                   fi
                 fi
               else
