[Chore] ignore IDE workspace files

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ docker/letsencrypt/*
 !docker/letsencrypt/.gitkeep
 docker/certbot/www/*
 !docker/certbot/www/.gitkeep
+
+# IDE
+.idea/
+workspace.xml
